стили на секции we-do-it & problems для 320 рх

--- a/src/partials/we_do_it.html
+++ b/src/partials/we_do_it.html
@@ -8,7 +8,7 @@
         <li class="doit-item list">
             <div class="doit-svg">
                 <svg class="doit-svg-item">
-                    <use href="./sprite.svg#icon-we_do_it-habbit"></use>
+                    <!-- <use href="./src/sprite.svg#icon-we_do_it-habbit"></use> -->
                 </svg>
             </div>
                 <p class="doit-svg-title">
