--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,14 +1,33 @@
 <section class="problem"> 
     <div class="container">
-    <h1 class="problem-title">Главные проблемы учеников на English ВНО, которые мы <span class="problem-title-item">помогаем</span> решить</h1>
+    <h1 class="problem-title">Главные проблемы <br> учеников на English ВНО,  которые </br> мы <span class="problem-title-item">помогаем</span> решить</h1>
     <div class="problem-list-container">
     <ul class="problem-list">
-        <li class="problem-item list">Незнание грамматики</li>
-        <li class="problem-item list">Неумение воcпринимать устную английскую речь</li>
-        <li class="problem-item list">Скупой словарный запас для написани сочинения</li>
-        <li class="problem-item list">Подготовка в одиночку</li>
-        <li class="problem-item list">Отсутствие единого ресурса знаний</li>
-        <li class="problem-item list">Недостатой самоорганизации и лень</li>
+        <!-- <li class="problem-item-number list">01</li> -->
+        <li class="problem-item list">
+            <p class="problem-item-number">01</p>
+            Незнание грамматики
+        </li>
+        <li class="problem-item list">
+            <p class="problem-item-number">02</p>
+            Неумение воcпринимать устную английскую речь
+        </li>
+        <li class="problem-item list">
+            <p class="problem-item-number">03</p>
+            Скупой словарный запас для написани сочинения
+        </li>
+        <li class="problem-item list">
+            <p class="problem-item-number">04</p>
+            Подготовка в одиночку
+        </li>
+        <li class="problem-item list">
+            <p class="problem-item-number">05</p>
+            Отсутствие единого ресурса знаний
+        </li>
+        <li class="problem-item list">
+            <p class="problem-item-number">06</p>
+            Недостатой самоорганизации и лень
+        </li>
     </ul>
     </div>
     </div>
