add fire + line

--- a/src/sass/_guarenty.scss
+++ b/src/sass/_guarenty.scss
@@ -1,5 +1,8 @@
 .warranty {
+  display: flex;
+  justify-content: space-between;
   background-color: var(--b-middle);
+  padding: 30px 20px;
   &-title {
     @include font(800, 26px, 1.307, 0.03em);
     color: #3d3d3d;
@@ -7,9 +10,7 @@
     margin-bottom: 30px;
   }
   &-list {
-    padding: 30px 20px;
-    width: 320px;
-    margin: auto;
+    width: 252px;
   }
   &-item {
     @include font(500, 12px, 1.67, 0.03em);
@@ -19,9 +20,36 @@
       margin-bottom: 23px;
     }
   }
+  &-fire-icon {
+    display: inline-block;
+    width: 15px;
+    height: 20px;
+  }
+  &-fire-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  &-icon:not(:last-child) {
+    margin-bottom: 83px;
+  }
+  &-icon {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
   & .orange-text {
     color: var(--txt-orange);
   }
+}
+.fire-line {
+  flex-grow: 1;
+  border-bottom: 1px dashed #b9b9b9;
+  transform: rotate(90deg);
+  width: 70px;
+  position: absolute;
+  top: 60px;
+  left: -28px;
 }
 .section.warranty-corect {
   padding-bottom: 0;
