--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -104,7 +104,350 @@ a {
     padding-bottom: 130px;
   }
 }
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
+.logo {
+  font-weight: 800;
+  font-size: 17px;
+  line-height: 1.235;
+  letter-spacing: 0.04em;
+  color: var(--txt-dark);
+}
+
+.logo-description {
+  font-weight: 700;
+  font-size: 5px;
+  line-height: 1.2;
+  letter-spacing: 0.21em;
+  color: var(--txt-dark);
+}
+
+.header-nav-link {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: gray;
+}
+
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: var(--txt-orange);
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.icon-menu {
+  stroke: black;
+}
+
+.advantages-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.advantages-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.429;
+  letter-spacing: 0.08em;
+  width: 146px;
+}
+
+.advantages-icon {
+  margin-right: 15px;
+}
+
+.advantages-icon-desk {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .section.container {
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+
+  .advantages-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .advantages-item:not(:last-child) {
+    margin-right: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-icon {
+    display: none;
+  }
+
+  .advantages-icon-desk {
+    display: block;
+  }
+
+  .advantages-text {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.65;
+    letter-spacing: 0.08em;
+    width: 100%;
+  }
+
+  .advantages-icon-desk {
+    margin-right: -15px;
+  }
+}
+.problems-container {
+  width: 320px;
+  height: 545px;
+  background-color: var(--b-dark);
+}
+
+.problems-title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--txt-light);
+}
+
+.problems-word-color {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(---txt-orange);
+}
+
+.problems-block-white {
+  width: 280px;
+  height: 488px;
+  background-color: var(--txt-light);
+  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  z-index: 1;
+}
+
+.problems-number {
+  width: 215px;
+  height: 24px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(---txt-orange);
+}
+
+.problems-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 215px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+}
+
+.doings {
+  padding: 0 20px;
+  text-align: center;
+}
+
+.doings-title {
+  padding-bottom: 30px;
+  color: var(--txt-dark);
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.doings-item {
+  height: 280px;
+  background: var(--b-white);
+  -webkit-box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+}
+
+.doings-item:last-child {
+  margin-bottom: 0;
+}
+
+.doings-item:hover,
+.doings-item:focus {
+  background-color: var(--b-accent-background);
+  color: var(--txt-light);
+}
+
+.doings-item:hover .doings-svg,
+.doings-item:focus .doings-svg {
+  fill: var(--white);
+}
+
+.doings-item:hover .doings-description,
+.doings-item:focus .doings-description {
+  color: var(--txt-light);
+}
+
+.doings-item:hover .doings-list-title::after,
+.doings-item:focus .doings-list-title::after {
+  background-color: var(--b-white);
+}
+
+.doings-list-title {
+  position: relative;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.428;
+  letter-spacing: 0.08em;
+  padding: 0 9px 42px;
+}
+
+.doings-list-title::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  bottom: 21px;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  background-color: var(--b-accent-background);
+}
+
+.doings-description {
+  padding-bottom: 22px;
+  color: var(--txt-grey);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  letter-spacing: 0.08em;
+  padding: 0 7px;
+}
+
+.doings-svg {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  fill: var(--light);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .doings-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+  }
+
+  .doings-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .doings-item:nth-child(2n+1) {
+    margin-right: 20px;
+  }
+
+  .doings-item {
+    margin-bottom: 27px;
+    width: 334px;
+    height: 334px;
+  }
+
+  .doings-item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+
+  .doings-svg {
+    margin-top: 40px;
+    margin-bottom: 30px;
+  }
+
+  .doings-list-title {
+    padding: 0 26px 52px;
+  }
+
+  .doings-list-title::after {
+    bottom: 26px;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+  }
+
+  .doings-description {
+    padding: 0 22px;
+  }
+}
 .program__section {
   background: var(--b-dark);
   padding-top: 50px;
@@ -200,82 +543,48 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.advantages-item {
+
+.teacher-main-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: var(--txt-dark);
+  margin-bottom: 20px;
+  padding: 5px 0;
+}
+
+.teacher-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+  margin-bottom: 10px;
+  padding: 5px 0;
+}
+
+.teacher-picture {
+  margin-bottom: 20px;
+}
+
+.teacher-list::before {
+  position: absolute;
+  content: "";
+  width: 280px;
+  height: 0;
+  border: 1px solid var(--txt-grey);
+}
+
+.warranty {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.advantages-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.429;
-  letter-spacing: 0.08em;
-  width: 146px;
-}
-
-.advantages-icon {
-  margin-right: 15px;
-}
-
-.advantages-icon-desk {
-  display: none;
-}
-
-@media screen and (max-width: 767px) {
-  .section.container {
-    padding-left: 52px;
-    padding-right: 52px;
-  }
-
-  .advantages-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .advantages-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1200px) {
-  .advantages-item:not(:last-child) {
-    margin-right: 21px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .advantages-icon {
-    display: none;
-  }
-
-  .advantages-icon-desk {
-    display: block;
-  }
-
-  .advantages-text {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.65;
-    letter-spacing: 0.08em;
-    width: 100%;
-  }
-
-  .advantages-icon-desk {
-    margin-right: -15px;
-  }
-}
-.warranty {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: var(--b-middle);
+  padding: 30px 20px;
 }
 .warranty-title {
   font-weight: 800;
@@ -287,9 +596,7 @@ a {
   margin-bottom: 30px;
 }
 .warranty-list {
-  padding: 30px 20px;
-  width: 320px;
-  margin: auto;
+  width: 252px;
 }
 .warranty-item {
   font-weight: 500;
@@ -302,8 +609,50 @@ a {
 .warranty-item:not(:last-child) {
   margin-bottom: 23px;
 }
+.warranty-fire-icon {
+  display: inline-block;
+  width: 15px;
+  height: 20px;
+}
+.warranty-fire-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+.warranty-icon:not(:last-child) {
+  margin-bottom: 83px;
+}
+.warranty-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
 .warranty .orange-text {
   color: var(--txt-orange);
+}
+
+.fire-line {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border-bottom: 1px dashed #b9b9b9;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  width: 70px;
+  position: absolute;
+  top: 60px;
+  left: -28px;
 }
 
 .section.warranty-corect {
@@ -462,14 +811,15 @@ a {
   }
 }
 .request-form {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 21, 24, 0.7)), to(rgba(17, 21, 24, 0.7))), url(../images/footer-mobile.jpg);
-  background-image: linear-gradient(rgba(17, 21, 24, 0.7), rgba(17, 21, 24, 0.7)), url(../images/footer-mobile.jpg);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-repeat: no-repeat;
   background-size: 320px 507px;
   background-position: center;
   width: 320px;
   height: 507px;
   padding: 50px 20px;
+  background-color: var(--b-dark);
 }
 .request-title {
   font-weight: 800;
