--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="program">
+<section id="program" class="program">
     <div class="container">
         <h2 class="program-title">Наша программа</h2>
         <ul lang="en" class="program-list">
@@ -108,8 +108,8 @@
                         </p>
                     </li>
             </ul> 
-            </li>
             <div class="hiding-square-bootom"></div>
+            </li>
         </ul>
         <div class="program-picture">
         </div>
