Add desktop position and font-size

--- a/src/sass/_guarantee.scss
+++ b/src/sass/_guarantee.scss
@@ -1,3 +1,6 @@
+.guarantee {
+  margin-bottom: 50px;
+}
 .guarantee-title {
   padding-bottom: 30px;
   font-weight: 800;
@@ -7,11 +10,18 @@
   text-align: center;
   letter-spacing: 0.03em;
 }
-.guarantee-wrapper {
-  background: #f1f1f1;
+
+@media screen and (max-width: 767px) {
+  .guarantee-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .guarantee-list {
+    padding: 30px 20px;
+  }
 }
 .guarantee-list {
-  padding-top: 30px;
+  background: #f1f1f1;
 }
 .guarantee-list-item {
   position: relative;
@@ -44,6 +54,65 @@
   line-height: 1.667;
   color: #3d3d3d;
 }
-.guarantee-text-accent {
+.guarantee-text-accent,
+.guarantee-span-accent {
   color: var(--accent-color);
+}
+.guarantee-span-accent {
+  margin-left: -4px;
+}
+@media screen and (min-width: 768px) {
+  .guarantee-list {
+    padding-left: 79px;
+    padding-right: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .guarantee-list-item:not(:last-child) {
+    &::before {
+      top: 60%;
+      height: 30px;
+    }
+  }
+  .guarantee-list-icon {
+    left: -1%;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .guarantee {
+    margin-bottom: 130px;
+  }
+  .guarantee-title {
+    padding-bottom: 50px;
+    font-size: 46px;
+  }
+  .guarantee-list {
+    padding-left: 112px;
+    padding-right: 112px;
+    padding-top: 50px;
+    padding-bottom: 45px;
+  }
+  .guarantee-list-item {
+    width: 1000px;
+    padding-left: 30px;
+  }
+  .guarantee-list-text,
+  .guarantee-text-accent {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+  .guarantee-list-item:not(:last-child) {
+    margin-bottom: 20px;
+
+    &::before {
+      left: -1%;
+      height: 40px;
+    }
+  }
+  .guarantee-list-icon {
+    left: -2%;
+    width: 22px;
+    height: 30px;
+  }
 }
