--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
 
             <input type="tel" name="phone" id="phone" class="request-form-input" placeholder="Телефон*" />
 
-            <button type="submit" class="request-form-btn">хочу на бесплатное занятие</button>
+            <button type="submit" class="btn">хочу на бесплатное занятие</button>
         </form>
     </div>
 </section>
