--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -29,6 +29,25 @@
     }
   }
 }
+.btn {
+  width: 260px;
+  height: 48px;
+  background-color: var(--b-accent-background);
+  color: var(--txt-light);
+  @include font(700, 12px, 1.25, 0.08em);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  &:hover,
+  &:focus {
+    background-color: transparent;
+    color: var(--txt-orange);
+    border: 2px solid var(--b-accent-background);
+  }
+}
+
 .footer {
   &-white {
     height: 199px;
