--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -846,6 +846,31 @@ a {
   color: var(--txt-orange);
 }
 
+.btn {
+  width: 260px;
+  height: 48px;
+  background-color: var(--b-accent-background);
+  color: var(--txt-light);
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+}
+.btn:hover, .btn:focus {
+  background-color: transparent;
+  color: var(--txt-orange);
+  border: 2px solid var(--b-accent-background);
+}
+
 .footer-white {
   height: 199px;
   -webkit-box-pack: center;
