добавляет стили for mobile

--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -5,6 +5,10 @@
     padding: 5px 0;
 }
 
+.teacher-picture {
+    margin-bottom: 20px;
+}
+
 .teacher-title {
     @include font(800, 20px, 1.2, 0.08em);
     color: var(--txt-dark);
@@ -12,8 +16,9 @@
     padding: 5px 0;
 }
 
-.teacher-picture {
-    margin-bottom: 20px;
+.check-box {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .teacher-list::before {
@@ -22,5 +27,33 @@
     width: 280px;
     height: 0;
     border: 1px solid var(--txt-grey);
+    margin-bottom: 20px;
 }
 
+.teacher-list {
+    display: flex;
+}
+
+.teacher-subtitle {
+    @include font(600, 14px, 1.214, 0.06em);
+    color: var(--txt-dark);
+}
+
+.teacher-undertitle {
+    display: flex;
+    align-items: center;
+    @include font(700, 20px, 1.65, 0.08em);
+    color: var(--txt-orange);
+}
+
+.teacher-text {
+    @include font(500, 12px, 1.167, 00.06em);
+    color: var(--txt-grey);
+    margin-bottom: 10px;
+}
+
+.teacher-link {
+    @include font(500, 12px, 1.167, 00.06em);
+    color: var(--txt-orange);
+    text-decoration-line: underline;
+}
