--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -6,15 +6,14 @@
       <img class="teacher-picture" src="images/teacher-mobile-tablet.jpg" alt="фото учителя" width="243" height="305.58">
     </div>
 
-    <div>
-      <h2 class="teacher-title">Елена Морева</h2>
-      <ul class="teacher-list">
+    <h2 class="teacher-title">Елена Морева</h2>
+    
+    <div class="teacher-list"></div>  
+      <ul class="teacher-list list">
         <li class="teacher-list-item">
-          <div>
-            <svg class="icon-check" width="17,08" height="14">
-              <use href="./images/sprite.svg#icon-check-mark"></use>
-            </svg>
-          </div>
+          <svg class="icon-check" width="17,08" height="14">
+        <use href="./images/sprite.svg#icon-check-mark"></use>
+      </svg>
           <h3 class="teacher-subtitle">Опыт подготовки учеников к ВНО - 6 лет</h3>
         </li>
 
