end mobile styles

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -9,6 +9,24 @@
     height: 507px;
     padding: 50px 20px;
     background-color: var(--b-dark);
+    &-holder {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    &-input {
+      width: 280px;
+      height: 48px;
+      background-color: transparent;
+      border: 1px solid var(--b-white);
+      box-sizing: border-box;
+      &:first-child {
+        margin-bottom: 20px;
+      }
+      &:nth-child(2) {
+        margin-bottom: 50px;
+      }
+    }
   }
   &-title {
     @include font(800, 14px, 1.36, 0.03em);
@@ -40,6 +58,7 @@
   text-align: center;
   text-transform: uppercase;
   border: none;
+  box-sizing: border-box;
   &:hover,
   &:focus {
     background-color: transparent;
