--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -18,8 +18,16 @@
       width: 280px;
       height: 48px;
       background-color: transparent;
+      color: white;
       border: 1px solid var(--b-white);
       box-sizing: border-box;
+      padding-left: 28px;
+      &::placeholder {
+        color: var(--txt-light);
+        @include font(600, 14px, 1.214, 0.08em);
+        display: flex;
+        align-items: center;
+      }
       &:first-child {
         margin-bottom: 20px;
       }
@@ -55,7 +63,7 @@
   @include font(700, 12px, 1.25, 0.08em);
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   text-transform: uppercase;
   border: none;
   box-sizing: border-box;
