--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -837,9 +837,66 @@ a {
   width: 280px;
   height: 48px;
   background-color: transparent;
+  color: white;
   border: 1px solid var(--b-white);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding-left: 28px;
+}
+.request-form-input::-webkit-input-placeholder {
+  color: var(--txt-light);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+}
+.request-form-input::-moz-placeholder {
+  color: var(--txt-light);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  display: flex;
+  align-items: center;
+}
+.request-form-input:-ms-input-placeholder {
+  color: var(--txt-light);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+}
+.request-form-input::-ms-input-placeholder {
+  color: var(--txt-light);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+}
+.request-form-input::placeholder {
+  color: var(--txt-light);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .request-form-input:first-child {
   margin-bottom: 20px;
@@ -887,7 +944,9 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-transform: uppercase;
   border: none;
   -webkit-box-sizing: border-box;
