Правки в моб меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,19 +17,13 @@
         aria-controls="menu-container"
         data-menu-button
       >
-        >
-        <svg width="30px" height="30px" aria-label="мобильное меню">
-          <use
-            width="20.5"
-            height="12"
-            class="icon-burger"
-            href="./images/sprite.svg#icon-burger"
-          ></use>
+        <svg class="burger-icon" aria-label="мобильное меню">
+          <use class="icon-burger" href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </button>
       <div class="menu-container" id="menu-container" data-menu>
-        <div class="menu-open">
-          <div class="main-nav">
+        <div class="menu-open container">
+          <div class="nav-open">
             <a href="" class="logo logo-reverse">
               <span class="logo__first-part">Hell</span>
               <svg class="logo__icon">
@@ -39,10 +33,8 @@
               <span class="logo__first-desc">Адский &nbsp;</span>
               <span class="logo__second-desc">Английский</span>
             </a>
-            <svg width="30px" height="30px" aria-label="мобильное меню">
+            <svg class="cross-icon" aria-label="мобильное меню">
               <use
-                width="14.5"
-                height="14.5"
                 class="icon-cross"
                 href="./images/sprite.svg#icon-cross"
               ></use>
@@ -62,7 +54,7 @@
               <a href="" class="page-nav__link">Контакты</a>
             </li>
           </ul>
-          <a href="#" class="button">Консультация по телефону</a>
+          <a href="#" class="button mobile">Консультация по телефону</a>
         </div>
       </div>
     </nav>
