--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -20,10 +20,10 @@
   height: 20px;
   margin-right: 4px;
   margin-left: 4px;
-  margin-bottom: 5px;
   @media screen and (min-width: 768px) {
     width: 22px;
     height: 30px;
+    margin-bottom: 5px;
   }
 }
 
@@ -41,5 +41,25 @@
 }
 
 .logo__first-desc {
-  color: #ff6b09;
+  color: black;
+
+  @media screen and (min-width: 768px) {
+    color: #ff6b09;
+  }
+}
+
+.logo-reverse {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.23;
+  letter-spacing: 0.04em;
+  color: white;
+
+  .logo__first-desc {
+    color: white;
+  }
 }
