--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -4,6 +4,10 @@
     background-color: var(--main-color);
 }
 
+.our-program .container{
+    position: relative;
+}
+
 .our-program-title{
     margin-bottom: 43px;
     font-weight: 800;
@@ -16,18 +20,23 @@
     color: var(--white-color);
 }
 
-.our-program-list::before{
+.our-program-list{
+    margin-left: 105px;
+
+    &::before{
         display: inline-block;
         content: "";
         position: absolute;
-        left: 20px;
-        top: 132px;
+        left: 79px;
+        top: 82px;
         width: 1px;
         height: 1282px;
         background-color: var(--white-color);
+    }
 }
 
 .our-program-item{
+    position: relative;
     font-weight: 700;
     font-size: 14px;
     line-height: 2;
@@ -39,7 +48,10 @@
     margin-bottom: 40px;
 
     &::before{
-        display: inline-block;
+        display: flex;
+        position: absolute;
+        left: -51px;
+        top: 6px;
         content: "";
         width: 12px;
         height: 12px;
@@ -49,13 +61,11 @@
     }
 }
 
-/*
-.semester-list{
-    margin-top: 20px;
+.our-program-semester-list{
+    margin-top: 13px;
 }
-*/
 
-.semester-item{
+.our-program-semester-item{
     font-weight: 700;
     font-size: 12px;
     line-height: 1.667;
@@ -64,16 +74,19 @@
 
     color: var(--orange-color);
 
+    &:not(:last-child){
+        margin-bottom: 11px;
+    }
+
 }
 
-/*
-.topic-list{
-    margin-top: 8px;
-    margin-bottom: 8px;
+.our-program-topic-list{
+    margin-top: 11px;
 }
-*/
 
-.topic-item{
+.our-program-topic-list
+
+.our-program-topic-item{
     font-weight: 500;
     font-size: 12px;
     line-height: 1.667;
@@ -86,6 +99,11 @@
 }
 
 @media screen and (min-width: 768px){
+    .our-program{
+        padding-top: 60px;
+        padding-bottom: 392px;
+    }
+
     .our-program-title{
         margin-bottom: 52px;
         font-size: 26px;
@@ -94,7 +112,51 @@
         text-align: left;
     }
 
+    .our-program-list{
+        margin-left: 144px;
+    
+        &::before{
+            left: 88px;
+            top: 97px;
+            width: 1px;
+            height: 705px;
+        }
 
+        .our-program-item{
+            margin-bottom: 30px;
+        
+            &::before{
+                left: -102px;
+                top: 6px;
+            }
+        }
+    }
+
+    .our-program-semester-list{
+        display: flex;
+        margin-top: 11px;
+    }
+
+
+    .our-program-semester-item{
+
+        .grammar{
+            min-width: 176px;
+        }
+
+        .vocabulary{
+            min-width: 155px;
+        }
+
+        .writing{
+            min-width: 110px;
+        }
+
+        &:not(:last-child){
+            margin-bottom: 0;
+        }
+    
+    }
 }
 
 @media screen and (min-width: 1344px){
