--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -32,6 +32,8 @@
               <li class="objects-item">Active Voice</li>
               <li class="objects-item">Passive Voice</li>
             </ul>
+          </li>
+          <li class="sub-item">
             <h4 class="objects-title">Vocabulary</h4>
             <ul class="objects-list">
               <li class="objects-item">Home</li>
@@ -53,12 +55,16 @@
               <li class="objects-item">Gerund</li>
               <li class="objects-item">Participle: 1, 2</li>
             </ul>
+          </li>
+          <li class="sub-item">
             <h4 class="objects-title">Vocabulary</h4>
             <ul class="objects-list">
               <li class="objects-item">Travel & Tourism</li>
               <li class="objects-item">Culture & Free Time</li>
               <li class="objects-item">Sport</li>
             </ul>
+          </li>
+          <li class="sub-item">
             <h4 class="objects-title">Writing</h4>
             <ul class="objects-list">
               <li class="objects-item">Informal Letter</li>
@@ -79,12 +85,16 @@
               <li class="objects-item">Conjunction</li>
               <li class="objects-item">Numeral</li>
             </ul>
+          </li>
+          <li class="sub-item">
             <h4 class="objects-title">Vocabulary</h4>
             <ul class="objects-list">
               <li class="objects-item">Healthy Living</li>
               <li class="objects-item">Nature & Environment</li>
               <li class="objects-item">Money</li>
             </ul>
+          </li>
+          <li class="sub-item">
             <h4 class="objects-title">Writing</h4>
             <ul class="objects-list">
               <li class="objects-item">Formal Letter</li>
@@ -94,26 +104,12 @@
       </li>
 
       <li class="item">
-        <h3 class="program-title">4 семестр</h3>
+        <h3 class="program-title">5 семестр</h3>
         <ul class="sub-list">
           <li class="sub-item">
-            <h4 class="objects-title">Grammar</h4>
+            <h4 class="objects-title">-</h4>
             <ul class="objects-list">
-              <li class="objects-item">Clauses: Conditional and Wishes</li>
-              <li class="objects-item">Direct / Reported speech</li>
-              <li class="objects-item">Preposition</li>
-              <li class="objects-item">Conjunction</li>
-              <li class="objects-item">Numeral</li>
-            </ul>
-            <h4 class="objects-title">Vocabulary</h4>
-            <ul class="objects-list">
-              <li class="objects-item">Healthy Living</li>
-              <li class="objects-item">Nature & Environment</li>
-              <li class="objects-item">Money</li>
-            </ul>
-            <h4 class="objects-title">Writing</h4>
-            <ul class="objects-list">
-              <li class="objects-item">Formal Letter</li>
+              <li class="objects-item">Revision Tests</li>
             </ul>
           </li>
         </ul>
