--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -14,6 +14,13 @@
   margin-bottom: 43px;
 }
 
+.program-list {
+  position: relative;
+  padding-left: 20px;
+  width: 176px;
+  margin-left: auto;
+}
+
 .program-title {
   color: $white-text-color;
   font-weight: 700;
@@ -24,11 +31,49 @@
   margin-bottom: 5px;
 }
 
-.sub-title {
+.objects-title {
   color: $accent-text-color;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.66;
   letter-spacing: 0.08em;
   margin-bottom: 5px;
+}
+
+.objects-title::before {
+  content: '';
+  display: inline-flex;
+  align-items: center;
+  background-color: $accent-text-color;
+  margin-right: 5px;
+  height: 1px;
+  width: 10px;
+}
+
+.program-list > .item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.sub-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.program-list > .item::before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 100%;
+  width: 2px;
+  left: 0;
+  top: 12px;
+  background-color: $white-text-color;
+}
+
+.objects-item {
+  color: $secondary-text-color;
+  opacity: 0.5;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.08em;
 }
