adapteive css for 768px

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,18 +21,24 @@
 </section>
 <footer>
     <div class="footer-white">
-        <span class="logo"> </span>
-        <div class="phone-groupe">
-            <svg class="phone">
-                <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
-            </svg>
-            <span class="phone-number">+38 (000) 000 00 00</span>
+        <div class="container">
+            <span class=" logo"> </span>
+            <div class="phone-groupe">
+                <svg class="phone">
+                    <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
+                </svg>
+                <span class="phone-number">+38 (000) 000 00 00</span>
+                <span class="footer-line"></span>
+                <img src="./images/instagram.jpg" alt="instagram" width="40" height="40">
+            </div>
+
         </div>
-        <img src="./images/instagram.jpg" alt="instagram" width="40" height="40">
     </div>
     <div class="footer-black">
-        <span class="footer-text">
-            @ Все права защищены, 2019
-        </span>
+        <div class="container">
+            <span class=" footer-text">
+                @ Все права защищены, 2019
+            </span>
+        </div>
     </div>
 </footer>
