--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -94,6 +94,9 @@
     @include font(500, 14px, 2, 0.05em);
     color: var(--txt-grey);
   }
+  &-line {
+    display: none;
+  }
 }
 .phone {
   width: 20px;
@@ -107,5 +110,24 @@
     align-items: center;
     display: flex;
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    &-white {
+    }
+    &-line {
+      flex-grow: 1;
+      border-bottom: 1px solid var(--txt-grey);
+      transform: rotate(90deg);
+      width: 70px;
+      // position: absolute;
+      top: 60px;
+      left: -28px;
+    }
+  }
+  .phone-groupe {
+    width: 698;
+    border: 1 solid red;
   }
 }
