--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -994,6 +994,9 @@ a {
   letter-spacing: 0.05em;
   color: var(--txt-grey);
 }
+.footer-line {
+  display: none;
+}
 
 .phone {
   width: 20px;
@@ -1015,4 +1018,23 @@ a {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-line {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    border-bottom: 1px solid var(--txt-grey);
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    width: 70px;
+    top: 60px;
+    left: -28px;
+  }
+
+  .phone-groupe {
+    width: 698;
+    border: 1 solid red;
+  }
 }/*# sourceMappingURL=main.css.map */
