--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -1,9 +1,50 @@
 .how-do {
-  background-color: var(--primary-background-color);
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .how-do-title {
   margin-bottom: 30px;
   text-align: center;
+  font-weight: 800;
+  font-size: 20px;
+  letter-spacing: 0.03em;
+}
+.skills-title {
+  position: relative;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.43;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--title-text-color);
+  margin-bottom: 42px;
+  &::after {
+    content: ' ';
+    position: absolute;
+    display: block;
+    bottom: -50%;
+    right: 46%;
+    width: 20px;
+    height: 2px;
+    letter-spacing: 0.08em;
+    background-color: var(--accent-color);
+  }
+}
+
+.skills-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--secondary-text-color);
+  padding-left: 2px;
+  padding-right: 1px;
+}
+.how-do-list-item {
+  text-align: center;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 }
 .how-do-list-item:hover,
 .how-do-list-item:focus {
@@ -30,17 +71,18 @@
   fill: var(--primary-white-color);
 }
 
+.how-do-icon {
+  display: block;
+  margin: 0 auto;
+  width: 45px;
+  height: 48px;
+  margin-bottom: 20px;
+  fill: var(--accent-color);
+}
 @media screen and (max-width: 767px) {
-  .how-do {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
   .how-do-title {
-    font-weight: 800;
-    font-size: 20px;
     line-height: 1.3;
 
-    letter-spacing: 0.03em;
     color: var(--title-text-color);
   }
   .how-do-list-item {
@@ -57,48 +99,100 @@
       margin-bottom: 15px;
     }
   }
-
-  .how-do-icon {
-    display: block;
-    margin: 0 auto;
-    width: 45px;
-    height: 48px;
-    margin-bottom: 20px;
-    fill: var(--accent-color);
+}
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .how-do-title {
+    font-size: 26px;
+    line-height: 1.31;
   }
+  .how-do-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    margin-right: -20px;
+    margin-bottom: -27px;
+    & > .how-do-list-item {
+      flex-basis: calc(100% / 2 - 20px);
+    }
+  }
+  .how-do-list-item {
+    width: 334px;
+    height: 334px;
+    padding-top: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-right: 20px;
+    margin-bottom: 27px;
 
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 5) {
+      margin-bottom: 0;
+    }
+  }
+  .how-do-icon {
+    margin-bottom: 30px;
+  }
   .skills-title {
-    position: relative;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.43;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: var(--title-text-color);
-    margin-bottom: 42px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .skills-text {
+    padding-left: 11px;
+    padding-right: 11px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .how-do {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+  .how-do-title {
+    font-size: 46px;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+  .how-do-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    margin-right: -20px;
+    margin-bottom: -20px;
+    & > .how-do-list-item {
+      flex-basis: calc(100% / 3 - 20px);
+    }
+  }
+  .how-do-list-item {
+    width: 425px;
+    height: 396px;
+    padding-top: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    &:nth-child(n + 4) {
+      margin-bottom: 0;
+    }
+  }
+  .skills-title {
+    font-size: 20px;
+    line-height: 1.4;
     &::after {
-      content: ' ';
-      position: absolute;
-      display: block;
-      bottom: -50%;
-      right: 46%;
-      width: 20px;
-      height: 2px;
-
-      letter-spacing: 0.08em;
-      background-color: var(--accent-color);
+      bottom: -35%;
     }
   }
   .skills-text {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.666;
-
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: var(--secondary-text-color);
-    padding-left: 2px;
-    padding-right: 1px;
+    font-size: 18px;
+    line-height: 1.56;
+    padding-left: 14px;
+    padding-right: 14px;
   }
 }
