--- a/src/sass/layout/_feature.scss
+++ b/src/sass/layout/_feature.scss
@@ -1,15 +1,16 @@
 .features__item_text {
-  font-weight: 700px;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.429;
   letter-spacing: 0.08em;
   color: #111518;
+  margin-left: 10px;
 }
 
-.features__list {
-  margin: 0 auto;
-}
 .features__item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   margin-bottom: 30px;
 }
 
