Добавил оформление мобилки без вектора

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,16 +1,17 @@
 <section class="hero">
     <div class="container">
         <div class="hero-offer">
-            <h1>Комплексная <br> подготовка к ВНО <br>
+            <h1 class="hero-title">Комплексная <br> подготовка к ВНО <br>
                 по английскому языку
             </h1>
             
-            <b><span>Просто не будет.</span>
-                Но ты гарантировано наберешь
-                <span class="hero-points">+25 баллов</span></b>
+            <p class="hero-subtitle">Просто не будет.</p>
+                <p class="hero-gift">Но ты гарантировано наберешь <span class="hero-points">+25 баллов</span></p>
+                <button class="btn-orange" type="button">хочу на бесплатное занятие</button>
         </div>
+        
         <div class="hero-img">
-            <picture class="hero-img-picture">
+            <picture class="hero-bg-picture">
                 <source srcset="./images/hero/hero-bg-desktop.webp 1x, ./images/hero/hero-bg-desktop@2x.webp 2x"
                     media="(min-width: 1280px)" type="image/webp">
                 <source srcset="./images/hero/hero-bg-desktop.png 1x, ./images/hero/hero-bg-desktop@2x.png 2x"
@@ -43,7 +44,18 @@
                     alt="Криво вырезанная картинка с училкой и студентами">
             </picture>
         </div>
-
-        <button class="btn-orange" type="button">хочу на бесплатное занятие</button>
     </div>
+
+    <!-- <picture class="vector">
+        <source srcset="./images/hero/hero-img-desktop.png 1x, ./images/hero/hero-img-desktop@2x.png 2x"
+            media="(min-width: 1280px)">
+        <source srcset="./images/hero/hero-img-tablet.png 1x, ./images/hero/hero-img-tablet@2x.png 2x"
+            media="(min-width: 768px)">
+        <source srcset="./images/hero/vector-mobile.png 1x, ./images/hero/vector-mobile@2x.png 2x"
+            media="(min-width: 320px)">
+        <img class="vector-img" src="./images/hero/vector-mobile.png"
+            alt="Криво вырезанная картинка с училкой и студентами">
+    </picture> -->
+
+
 </section>
