--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,24 +1,105 @@
 .hero {
-  max-width: 841.55px;
-  min-height: 602.24px;
+  max-width: 768px;
+  min-height: 618px;
   // width: 480px;
   // height: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #7a7a7a;
+  padding-top: 50px;
+  // background-color: #7a7a7a;
+  background-image: url('../images/hero/vector-mobile.png');
+//   background: #ffffff;
+//   /* shsw */
+
+//   background-size: cover;
+//   box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+//   background-repeat: no-repeat;
+//   background-position: center 0;
+// }
+
+.hero-offer {
+  @media screen and (min-width: 320px) {
+    width: 280px;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 332px;
+  }
+}
+
+.hero-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 136%;
+  /* or 27px */
+
+  letter-spacing: 0.03em;
+
+  color: #111518;
+  margin-bottom: 30px;
+}
+
+.hero-subtitle {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  /* or 157% */
+
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.08em;
+
+  color: #b9b9b9;
+}
+
+.hero-gift {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 22px;
+  align-items: center;
+  letter-spacing: 0.08em;
+  color: #111518;
+  margin-bottom: 30px;
+}
+
+.hero-points {
+  color: var(--accent-color);
+}
+
+.hero-img {
+  position: relative;
+}
+
+.hero-bg-img {
+  display: block;
+  margin: 0 auto;
+}
+
+.hero-img-picture {
+  position: absolute;
+  top: 56%;
+  left: 52%;
+  display: block;
+  transform: translate(-50%, -50%);
 }
 
 .btn-orange {
-  max-width: 200px;
+  max-width: 260px;
   width: 100%;
-  height: 50px;
+  height: 48px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   //   @include fontOptions(700, 16px, 30px);
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
   align-items: center;
   text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--bg-color);
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: #ffffff;
   background-color: var(--accent-color);
   cursor: pointer;
   border: transparent;
@@ -26,6 +107,10 @@
   transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-points {
-  color: var(--accent-color);
-}
+// .vector {
+//   background: #ffffff;
+//   /* shsw */
+
+//   box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+//   background-repeat: no-repeat;
+// }
