--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,6 +1,7 @@
 <section class="section">
 <div class="container features">
-    <h1 class="features-title">Почему нас<br> выбирают</h1>
+    <h1 class="features-title">Почему нас
+         выбирают</h1>
     <ul class="features-list list">
         <li class="features-item">
             <p class="features-description">Обучение в малых командах</p>
@@ -12,7 +13,7 @@
             <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
         </li>
         <li class="features-item">
-            <p class="features-description">Ревльные результаты преподавателя</p>
+            <p class="features-description">Реальные результаты преподавателя</p>
         </li>
         <li class="features-item">
             <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
