--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,15 +1,18 @@
 .problems-section {
+  position: relative;
+  margin: auto;
+  max-width: 1680px;
   background-color: #111518;
-  padding-top: 50px;
 }
 .problems {
+  padding-top: 50px;
   position: relative;
-
-  height: 547px;
+  height: 560px;
 }
 .problems-title {
-  @include font(800, 20px, 1.3);
+  @include font(800, 20px, 1.35);
   letter-spacing: 0.03em;
+  white-space: pre-line;
   color: #ffffff;
   margin-bottom: 27px;
 }
@@ -34,7 +37,7 @@
 .problems-item::before {
   counter-increment: section;
   content: '—  0' counter(section);
-  @include font(700, 20px, 1.2);
+  @include font(700, 14px, 1.2);
   letter-spacing: 0.08em;
   color: #ff6b09;
   margin: 0;
@@ -48,19 +51,26 @@
   margin-top: 5px;
   margin-bottom: 10px;
 }
+.problems-img-cont {
+  display: none;
+}
 
 @media screen and (min-width: 768px) {
   .problems {
+    padding-top: 59px;
     height: 340px;
   }
   .problems-title {
     @include font(800, 26px, 1.3);
+    margin-left: 2px;
   }
   .problems-list {
+    position: absolute;
+    top: 52%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+
     padding-top: 30px;
     padding-bottom: 24px;
 
@@ -70,36 +80,40 @@
     height: 303px;
   }
 
-  .problems-item {
-    width: calc(100% / 2);
-  }
-  .problems-item:first-child {
-    margin-bottom: 24px;
-  }
-
   .problems-description {
     margin-bottom: 0;
   }
 }
-@media screen and (min-width: 1344px) {
-  .problems-section {
-    padding-top: 100px;
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .problems-item:nth-child(2n) {
+    width: 225px;
   }
+  .problems-item:nth-child(2n + 1) {
+    width: 236px;
+  }
+  .problems-item:first-child {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (max-width: 1343px) {
+  .problems-description {
+    white-space: pre-line;
+  }
+}
+
+@media screen and (min-width: 1344px) {
   .problems {
+    padding-top: 100px;
     height: 560px;
   }
   .problems-title {
     @include font(800, 46px, 1.3);
-    margin-bottom: 70px;
+    margin: 0;
   }
   .problems-list {
-    display: flex;
-    flex-wrap: wrap;
-    // justify-content: space-between;
-    align-items: center;
     padding-top: 70px;
-    padding-bottom: 60px;
-
+    padding-bottom: 62px;
+    top: 62%;
     padding-left: 114px;
     padding-right: 112px;
     max-width: 1314px;
@@ -107,10 +121,23 @@
   }
   .problems-item {
     width: 336px;
-    height: 56px;
+  }
+  .problems-item::before {
+    @include font(700, 20px, 1.2);
   }
   .problems-description {
     padding-top: 10px;
     margin-bottom: 32px;
+    @include font(700, 20px, 1.71);
+  }
+  .problems-img-cont {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+  }
+  .problems-img {
+    display: block;
   }
 }
