--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -10,6 +10,7 @@ letter-spacing: 0.03em;
 color:white;
 }
 .problems{
+position: absolute;
 padding-top: 50px;
 background-color: black;
 }
@@ -17,6 +18,8 @@ background-color: black;
 color:#FF6B09;
 }
 .section-problems{
+margin-top: 27px;
+position: relative;
 padding-top: 30px;
 background: #FFFFFF;
 box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
@@ -50,3 +53,13 @@ position: relative;
     width: 20px;
     transform: translateX(130%);
 }
+
+.problem-list-item:not(:last-child){
+    margin-bottom: 20px;
+}
+// @media screen and (max-width:768px){
+// .problem-list-item {
+// margin-bottom: 10px;} 
+// }
+
+
