--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -16,29 +16,29 @@
                             </h3>
                         </li>
                         <li class="problem-list-item">
-                            <h3 class="problems-title">
+                            <h3 class="problems-title accent-line">
                                 Неумение вомпринимать
                                 устную английскую речь
                             </h3>
                         </li>
                         <li class="problem-list-item">
-                            <h3 class="problems-title">
+                            <h3 class="problems-title accent-line">
                                 Скупой словарный запас
                                 для написани сочинения
                             </h3>
                         </li>
                         <li class="problem-list-item">
-                            <h3 class="problems-title">
+                            <h3 class="problems-title accent-line">
                                 Поодготовка в одиночку
                             </h3>
                         </li>
                         <li class="problem-list-item">
-                            <h3 class="problems-title">
+                            <h3 class="problems-title accent-line">
                                 Отсутствие единого ресурса знаний
                             </h3>
                         </li>
                         <li class="problem-list-item">
-                            <h3 class="problems-title">
+                            <h3 class="problems-title accent-line ">
                                 Недостатой самоорганизации и лень
                             </h3>
                         </li>
